# CCodeRecipes

./: README.md
CMakeClassExample/: CMakeLists.txt  MainObjectExample1.cpp  MyOwnClass.h
