# CMakeList.txt: proyecto de CMake para CMakeProject1, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeClassExample")

# Agregue un origen al ejecutable de este proyecto.
add_executable (CMakeClassExample "MainObjectExample1.cpp" )

# TODO: Agregue pruebas y destinos de instalación si es necesario.
